# compliance-suite

./: .eslintrc.json  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  package.json  pnpm-lock.yaml
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
.github/workflows/: ci.yml
apps/questionnaire/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/questionnaire/src-tauri/: Cargo.toml  tauri.conf.json
apps/questionnaire/src-tauri/icons/: icon.icns
apps/questionnaire/src-tauri/src/: app_state.rs  error_map.rs  main.rs
apps/questionnaire/src-tauri/src/commands/: answer_bank.rs  export.rs  license.rs  matching.rs  mod.rs  questionnaire.rs  vault.rs
apps/sop/: package.json
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
core/: Cargo.toml
core/src/: lib.rs  prelude.rs
core/tests/: answer_bank_tests.rs  audit_chain_tests.rs  export_pack_golden_tests.rs  license_tests.rs  matching_tests.rs  migrations_tests.rs  (+1 more)
docs/: 00_OVERVIEW.md  01_ARCHITECTURE.md  02_REPO_STRUCTURE.md  03_DATA_MODEL.md  04_API_CONTRACTS.md  05_IMPLEMENTATION_ORDER.md  06_ERROR_HANDLING.md  07_TESTING.md  08_SECURITY_PRIVACY.md  09_ASSUMPTIONS_DECISIONS.md  10_DEFINITION_OF_DONE.md  11_RUNBOOK.md  12_API_REFERENCE.md  13_DATABASE_SCHEMA.md  CODEX_PROMPT.md  DECISION_LOG.md  STATUS.md
fixtures/: README.md
scripts/: build.sh  clean-heavy.sh  clean-local.sh  demo.sh  dev-lean.sh  format.sh  lint.sh  test.sh  typecheck.sh
(+91 files in other folders)
