[package]
name = "cs_questionnaire_tauri"
version = "0.0.0"
edition = "2021"

[dependencies]
cs_core = { package = "core", path = "../../../core" }
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
